# rul-prediction

./: README.md  pyproject.toml  requirements.txt
app/: dashboard.py
artifacts/: drift_reference.json  meta.json  metrics.json  model.pt  preprocess.json
rul_service/: __init__.py  api.py  artifacts.py  cli.py  config.py  data.py  drift.py  models.py  predict.py  schemas.py  train.py
tests/: conftest.py  test_api.py  test_data.py  test_drift.py  test_predict.py
