[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rul-service"
version = "0.1.0"
description = "Deployable, monitored Remaining-Useful-Life prediction service for turbofan engines (NASA CMAPSS)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Sashank Talluri" }]
license = { text = "MIT" }
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
ui = ["streamlit>=1.36", "plotly>=5.20", "requests>=2.31"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
rul-service = "rul_service.cli:app"

[tool.setuptools.packages.find]
include = ["rul_service*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
